--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_redux: ^0.8.2
   flutter_swiper: ^1.1.6
+  redux: ^5.0.0
 
 dev_dependencies:
   flutter_test:
